--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,35 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Dota2 TeamHunter",
-    "update_url": "https://clients2.google.com/service/update2/crx",
-    "version": "1.1.0",
-    "description": "Focus on your favourite Dota2 team.Get team info and recent match results.",
+    "version": "1.2.0",
+    "description": "A Chrome extension to track Dota2 team information and recent results.",
     "icons": {
-        "128": "images/icon128.png",
+      "16": "images/icon16.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
+    },
+    "action": {
+      "default_popup": "index.html",
+      "default_icon": {
+        "16": "images/icon16.png",
         "48": "images/icon48.png",
-        "16": "images/icon16.png"
+        "128": "images/icon128.png"
+      }
     },
     "background": {
-        "scripts": [
-            "js/getdata.js"
-        ],
-      "persistent":true
-    },
-    "browser_action": {
-        "default_icon": {
-            "16": "images/icon16.png"
-        },
-        "default_popup": "index.html"
+      "service_worker": "background.js"
     },
     "permissions": [
-        "https://api.opendota.com/api/*"
+      "storage",
+      "activeTab"
+    ],
+    "host_permissions": [
+      "https://api.opendota.com/*"
+    ],
+    "content_scripts": [
+      {
+        "matches": ["<all_urls>"],
+        "js": ["js/getdata.js", "js/transdata.js"]
+      }
     ]
-}
+  }
